# probe_lang

./: .clang-format  CLAUDE.md  CMakeLists.txt  Makefile  installs.txt  prompts.txt
cmake/: EmbedResources.cmake  embed_resource.cmake
docker/: .env  docker-compose.yaml  docker-down.bash  docker-recreate.bash  docker-remove.bash  docker-restart.bash
docker/pg-init/: init.sql
docker/pg-init-test/: init.sql
install-SDL3-from-src/: .gitignore  readme.md
installs/libpqxx/: .gitignore  10-download.bash  20-create_build.bash  30-build.bash  40-install.bash  50-check-install.bash
resources/: SomeTextFile.txt
src/: App.h  Clr.h  ConfirmDlg.cpp  ConfirmDlg.h  Conn.cpp  Conn.h  ConnNode.h  ConnTest.cpp  ConnTest.h  ContextMenu.cpp  ContextMenu.h  CustomId.cpp  CustomId.h  Dlg.cpp  Dlg.h  DlgMouse.h  DragState.h  FolderMenu.cpp  FolderMenu.h  FolderNode.h  FontAtlas.cpp  FontAtlas.h  FormEditFolder.cpp  FormEditFolder.h  FormEditRepository.cpp  FormEditRepository.h  GlyphInfo.h  InputField.cpp  InputField.h  MsgDlg.cpp  MsgDlg.h  PanelMenu.cpp  PanelMenu.h  SchemaMenu.cpp  SchemaMenu.h  SchemaNode.h  SelectableLabel.cpp  SelectableLabel.h  SelectableText.cpp  SelectableText.h  (+8 more)
src/back/: BlockService.cpp  BlockService.h  ChangeSystem.cpp  ChangeSystem.h  Conn.cpp  Conn.h  ConnNode.h  ConnService.cpp  ConnService.h  CustomId.cpp  CustomId.h  Db.cpp  Db.h  DbInternal.h  ExprService.cpp  ExprService.h  FolderDb.cpp  FolderDb.h  FolderNode.h  FolderService.cpp  FolderService.h  InitDb.cpp  InitDb.h  ProjectTreeService.cpp  ProjectTreeService.h  RepoService.cpp  RepoService.h  SchemaNode.h  StatementService.cpp  StatementService.h  UndoService.cpp  UndoService.h  UnitEditorState.cpp  UnitEditorState.h  UnitService.cpp  UnitService.h  UtilDb.cpp  UtilDb.h
src/back/etc/: ChangeSystem.cpp  ChangeSystem.h  CustomId.cpp  InitDb.cpp  UnitEditorState.cpp  UnitEditorState.h  UtilDb.cpp  UtilDb.h
src/back/model/: BBox.h  Block.h  BlockType.h  ChangeOp.h  ChangeSysTarget.h  Conn.cpp  Conn.h  ConnHash.h  ConnNode.h  ConnStore.h  EditorCoordState.h  Expr.h  ExprType.h  FolderNode.h  MethodAccess.h  MethodArg.h  MethodType.h  RowChange.h  SchemaNode.h  Statement.h  UndoRowChange.h  Unit.h
src/back/pool/: Connection.cpp  Connection.h  Pool.cpp  Pool.h  PoolManager.cpp  PoolManager.h  PoolService.cpp  PoolService.h
src/back/service/: BlockService.cpp  BlockService.h  BlockServiceR.cpp  BlockServiceR.h  BlockServiceRW.cpp  BlockServiceRW.h  ConnService.cpp  ConnService.h  ConnServiceR.cpp  ConnServiceR.h  ConnServiceRW.cpp  ConnServiceRW.h  ExprService.cpp  ExprService.h  ExprServiceR.cpp  ExprServiceR.h  ExprServiceRW.cpp  ExprServiceRW.h  FolderService.cpp  FolderService.h  FolderServiceR.cpp  FolderServiceR.h  FolderServiceRW.cpp  FolderServiceRW.h  ProjectTreeService.cpp  ProjectTreeServiceR.cpp  ProjectTreeServiceR.h  ProjectTreeServiceRW.cpp  ProjectTreeServiceRW.h  RepoService.cpp  RepoService.h  RepoServiceR.cpp  RepoServiceR.h  RepoServiceRW.cpp  RepoServiceRW.h  UnitService.cpp  UnitService.h  UnitServiceR.cpp  UnitServiceR.h  UnitServiceRW.cpp  (+1 more)
src/front/: App.h  AppIcon.cpp  AppIcon.h  Clr.h  ConfirmDlg.cpp  ConfirmDlg.h  ContextMenu.cpp  ContextMenu.h  ContextMenuSelExpr.cpp  ContextMenuSelExpr.h  Dlg.cpp  Dlg.h  DlgMouse.h  DragState.h  EditorView.cpp  EditorView.h  FolderMenu.cpp  FolderMenu.h  FontAtlas.cpp  FontAtlas.h  FormEditFolder.cpp  FormEditFolder.h  FormEditRepository.cpp  FormEditRepository.h  FormEditUnit.cpp  FormEditUnit.h  FormSelectUnit.cpp  FormSelectUnit.h  FormWidgets.h  GlyphInfo.h  InputField.cpp  InputField.h  MenuNav.h  MsgDlg.cpp  MsgDlg.h  PanelMenu.cpp  PanelMenu.h  SchemaMenu.cpp  SchemaMenu.h  SelectableLabel.cpp  (+12 more)
src_test/: TestCustomId.cpp  TestDb.h
src_test/back/: DbTestBase.h  TestBlockService.cpp  TestChangeSystem.cpp  TestConnService.cpp  TestCustomId.cpp  TestExprService.cpp  TestFolderService.cpp  TestInitDb.cpp  TestProjectTreeService.cpp  TestRepoService.cpp  TestStatementService.cpp  TestUndoService.cpp  TestUnitEditorState.cpp  TestUnitService.cpp  TestUtilDb.cpp
src_test/back/etc/: TestChangeSystem.cpp  TestCustomId.cpp  TestInitDb.cpp  TestUnitEditorState.cpp  TestUtilDb.cpp
src_test/back/model/: TestConn.cpp
src_test/back/service/: TestBlockService.cpp  TestBlockServiceR.cpp  TestBlockServiceRW.cpp  TestConnService.cpp  TestConnServiceR.cpp  TestConnServiceRW.cpp  TestExprService.cpp  TestExprServiceR.cpp  TestExprServiceRW.cpp  TestFolderService.cpp  TestFolderServiceR.cpp  TestFolderServiceRW.cpp  TestProjectTreeService.cpp  TestProjectTreeServiceR.cpp  TestProjectTreeServiceRW.cpp  TestRepoService.cpp  TestRepoServiceR.cpp  TestRepoServiceRW.cpp  TestUnitService.cpp  TestUnitServiceR.cpp  TestUnitServiceRW.cpp
